# flipper-000292828282828282

./: .bat  .env.local  .flutter-plugins-dependencies  .gitattributes  .gitignore  .gitmodules  .metadata  .nginx  .packages  Agent.MD  CHANGELOG.md  CMakeLists.txt  FLipper.md  INIHQ.json  LICENSE  README.md  SALE.json  TODO.md  analysis_options.yaml  business.json  consolidate.sh  data.mdb  deferred_components_loading_units.yaml  dependencies.txt  dependencies.yaml  execute_integration_test.sh  feature.md  firebase.json  firebase_rule_worked.json  flutter_native_splash.yaml  flutterw  git.sh  http.http  l10n.yaml  linux-based-action.md  lock.mdb  me.json  melos.yaml  package.json  payment.cpp  (+10 more)
.firebase/: hosting.YnVpbGRcd2Vi.cache
Features/: Agent.MD  MenuFeature.md  Scanner.md
android/: .gitignore  .project  build.gradle  buildscript-gradle.lockfile  gradle.properties  key.properties  local.properties  project-flutter_statusbarcolor_ns.lockfile  project-fluttertoast.lockfile  project-geolocator_android.lockfile  project-google_maps_flutter.lockfile  project-google_sign_in.lockfile  project-image_picker.lockfile  project-nb_utils.lockfile  project-objectbox_sync_flutter_libs.lockfile  project-open_file.lockfile  project-qr_code_scanner.lockfile  project-sentry_flutter.lockfile  project-sign_in_with_apple.lockfile  project-twitter_login.lockfile  settings.gradle
certs/: CERTIFICATE.pfx
cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeHello.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_hello.vcxproj  cmake_hello.vcxproj.filters  (+1 more)
(+1425 files in other folders)
